kubernetes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-store-frontend
  labels:
    app: nodejs-store
    tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-store
      tier: frontend
  template:
    metadata:
      labels:
        app: nodejs-store
        tier: frontend
    spec:
      containers:
      - name: frontend
        image: gcr.io/GOOGLE_CLOUD_PROJECT/nodejs-store-frontend:COMMIT_SHA
        ports:
        - name: http-server
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: "/health-check"
            port: 8080
          initialDelaySeconds: 20
