kubernetes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-store-frontend
  labels:
    app: nodejs-store
    tier: frontend
spec:
  type: ClusterIP
  selector:
    app: nodejs-store
    tier: frontend
  ports:
  - name: http-frontend
    port: 80
    targetPort: 8080
